--- a/package.json
+++ b/package.json
@@ -1,41 +1,27 @@
 {
   "name": "recallbricks-api",
   "version": "2.0.0",
-  "description": "RecallBricks API - The Memory Layer for AI (Supabase + MCP Edition)",
   "type": "module",
-  "main": "dist/index.js",
   "scripts": {
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
     "build": "npm run clean && tsc",
     "dev": "tsx src/index.ts --stdio",
-    "start": "node dist/index.js --stdio"
+    "start": "npm run build && node dist/index.js --stdio"
   },
-  "keywords": [
-    "ai",
-    "memory",
-    "mcp",
-    "api",
-    "supabase",
-    "llm",
-    "recallbricks"
-  ],
-  "author": "RecallBricks",
-  "license": "MIT",
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.68.0",
-    "@modelcontextprotocol/sdk": "^1.0.0",
-    "@supabase/supabase-js": "^2.39.0",
+    "@modelcontextprotocol/sdk": "^1.0.4",
+    "@supabase/supabase-js": "^2.47.10",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "openai": "^6.7.0",
-    "zod": "^3.23.8"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "openai": "^4.73.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.19.24",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
