Add service token authentication for Runtime

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,13 @@ SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # ------------------------------------------------------------------------------
+# Service-to-Service Authentication (Required for RecallBricks Runtime)
+# ------------------------------------------------------------------------------
+# Secret token for internal service authentication
+# Generate a secure random token: openssl rand -base64 32
+RECALLBRICKS_SERVICE_TOKEN=your-secure-service-token-here
+
+# ------------------------------------------------------------------------------
 # AI Services (Required for specific features)
 # ------------------------------------------------------------------------------
 
